 $Id: ChangeLog,v 1.113.2.8 2005/06/25 10:36:53 uehira Exp $

2005-06-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* ls8tel16_raw.c : bug fixed.
	* configure.in: added AC_C_CHAR_UNSIGNED
	* Version 1.1.70 released.

2005-06-24 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvt.c, recvs.c, win.c:
	  don't change optarg's content (bug fix)
	* Version 1.1.69 released.

2005-06-22 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* relaym : MF relay.c
	  -N for passing through packet numbers

2005-06-17 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win_m : bug fixed.
	* Version 1.1.68 released.

2005-06-14 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* added Daramark LS-8000SH (LS8TEL14/16 firmware) data utility
	  ls8tel_STM, ls8tel_STS
	* Version 1.1.67 released.

2005-06-10 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* added Daramark LS-8000SH (LS8TEL14/16 firmware) data utility
	  ls8tel16_win, ls8tel16_raw
	* Version 1.1.66 released.

2005-06-03 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* hypomhc.c : bug fixed. (by T. Takeda)
	* Version 1.1.65 released.

2005-05-18 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* relay.c,relay.1 : -N for passing through packet numbers

2005-05-18 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus3.c : don't compile IPv4 only environment.
	                : close security hall.
	* added 'mkpicknoise'
	* Version 1.1.64 released.
	  
2005-04-26 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* added 'recvstatus3'. receive A8/A9 packets from Daramark
	  LS-8000SH of LS8TEL14/16 firmware
	* Version 1.1.63 released.
	  
2005-04-20 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* win.1, pickfile.1, pick2pick.1 : updated.
	* Version 1.1.62 released.
	  
2005-04-14 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvnmx, recvnmx.1 : -n (NP packet) added.
	* raw_shift.1 : bug fixed.
	* Version 1.1.61 released.

2005-03-18 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* insert_raw.c, insert_trg.c, wdiskts.c, raw_time.c
	  - memory leak check code
	  